# euler-rs

./: Cargo.toml
.github/workflows/: pipeline.yml
src/: main.rs
src/combinatorics/: binomial.rs
src/common/: data.rs
src/fractions/: mod.rs
src/positional/: digits.rs
src/primes/: factors.rs  is_prime.rs  mod.rs  sieve.rs
src/problems/: mod.rs  p11_largest_product_in_a_grid.rs  p17_number_letter_counts.rs  p19_counting_sundays.rs  p22_names_scores.rs  p23_non_abundant_sums.rs  p24_lexicographic_permutations.rs  p26_reciprocal_cycles.rs  p27_quadratic_primes.rs  p28_number_spiral_diagonals.rs  p29_distinct_powers.rs  p30_digit_fifth_powers.rs  p31_coin_sums.rs  p32_pandigital_products.rs  p33_digit_cancelling_fractions.rs  p34_digit_factorials.rs  p35_circular_primes.rs  p36_double_base_palindromes.rs  p37_truncatable_primes.rs  p38_pandigital_multiples.rs  p39_integer_right_triangles.rs  p40_champernownes_constant.rs  p41_pandigital_prime.rs  p42_coded_triangle_numbers.rs  p43_sub_string_divisibility.rs  p44_pentagon_numbers.rs  p45_triangular_pentagonal_and_hexagonal.rs  p46_goldbachs_other_conjecture.rs  p47_distinct_primes_factors.rs  p49_prime_permutations.rs  p50_consecutive_prime_sum.rs  p51_prime_digit_replacements.rs  p52_permuted_multiples.rs  p53_combinatoric_selections.rs  p54_poker_hands.rs  p55_lychrel_numbers.rs  p57_square_roots_convergents.rs  p75_singular_integer_right_triangles.rs
src/words/: alphabet.rs  file.rs
