[package]
name = "euler"
version = "0.1.0"
authors = ["Jakub Sokołowski <jakub.sokolowski1996@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
itertools = "0.10.1"
lazy_static = "1.4.0"
rayon = "1.5.1"
regex = "1.5.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
